[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/Attacks/Sprout/SproutAttack.png" type="Texture" id=1]
[ext_resource path="res://images/Attacks/Sprout/SproutAttack1.png" type="Texture" id=2]
[ext_resource path="res://images/Attacks/Sprout/SproutAttack2.png" type="Texture" id=3]
[ext_resource path="res://objects/Item Objects/SproutAttack.gd" type="Script" id=4]
[ext_resource path="res://sound/sfx/pop.ogg" type="AudioStream" id=5]
[ext_resource path="res://sound/sfx/Stretch.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 145, 18.5714 )

[sub_resource type="Animation" id=2]
resource_name = "Disappear"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 3.4822, 0.170754 ),
"update": 0,
"values": [ Vector2( 0, 11.3176 ), Vector2( 0, 107.252 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 3.4822, 0.170754 ),
"update": 0,
"values": [ Vector2( 1, 0.900396 ), Vector2( 1, 0.0357343 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 3.4822, 0.170754 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.298039, 0.243137, 0.184314, 0 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("SlideWhistle")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "Grow"
length = 1.31
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.38, 0.87, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.38, 0.87, 0.9, 1.15, 1.31 ),
"transitions": PoolRealArray( 0.297302, 0.297302, 2.63902, 1, 1, 2.63902, 1.6245 ),
"update": 0,
"values": [ Vector2( 1, 0.16133 ), Vector2( 1, 0.16133 ), Vector2( 1, 1.12808 ), Vector2( 1, 1.00665 ), Vector2( 1, 1 ), Vector2( 1, 0.895337 ), Vector2( 1, 0.900396 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.38, 0.87, 0.9, 1.15, 1.31 ),
"transitions": PoolRealArray( 0.297302, 0.297302, 2.63902, 1, 1, 2.63902, 1.6245 ),
"update": 0,
"values": [ Vector2( 0, 97.2857 ), Vector2( 0, 97.2857 ), Vector2( 0, -14.8571 ), Vector2( 0, -0.77137 ), Vector2( 0, 0 ), Vector2( 0, 11.8789 ), Vector2( 0, 11.3176 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08, 0.86, 0.87, 1.14, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1e+06, 1, 1e+06 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 30.672, 34.584 ), Vector2( 30.672, 34.584 ), Vector2( 14.278, 53.95 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionPolygon2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.08, 0.38, 0.86, 1.14 ),
"transitions": PoolRealArray( 0.297302, 0.297302, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 98.5715 ), Vector2( 0, 98.5715 ), Vector2( 0, -13.6926 ), Vector2( 0, -1.42857 ), Vector2( 0, 11.4286 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionPolygon2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.08, 0.38, 0.86, 1.14 ),
"transitions": PoolRealArray( 0.297302, 0.297302, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.18006 ), Vector2( 1, 0.18006 ), Vector2( 1, 1.13839 ), Vector2( 1, 1.03051 ), Vector2( 1, 0.881908 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionPolygon2D:polygon")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.08, 0.86, 0.87, 1.14, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -22.8571, -37.1429, 2.85714, -82.8572, 40, -120, 91.4286, -124.286, 104.286, -87.1429, 74.2857, -38.5714, 44.2857, 0, 7.14286, 64.2857, -5.71429, 115.714 ), PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -22.8571, -37.1429, 2.85714, -82.8572, 40, -120, 91.4286, -124.286, 104.286, -87.1429, 74.2857, -38.5714, 44.2857, 0, 7.14286, 64.2857, -5.71429, 115.714 ), PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -22.8571, -37.1429, 2.85714, -82.8572, 40, -120, 91.4286, -124.286, 104.286, -87.1429, 74.2857, -38.5714, 44.2857, 0, 7.14286, 64.2857, -5.71429, 115.714 ), PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -11.4286, -13.8628, 31.4286, -41.5885, 68.5714, -44.361, 91.4286, -34.657, 138.571, -4.15885, 72.8571, 22.1805, 44.2857, 0, 7.14286, 64.2857, -5.71429, 115.714 ), PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -11.4286, -13.8628, 31.4286, -41.5885, 68.5714, -44.361, 91.4286, -34.657, 138.571, -4.15885, 72.8571, 22.1805, 44.2857, 0, 7.14286, 64.2857, -5.71429, 115.714 ), PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -11.4286, -13.8628, 15.7143, -9.71919, 44.2857, 9.71919, 72.8571, 9.71919, 97.1429, 55.0754, 100, 100.432, 32.8571, 56.6953, 18.5714, 32.3973, 2.85714, 25.9178, -12.8571, 66.4145, -5.71429, 115.714 ) ]
}
tracks/7/type = "audio"
tracks/7/path = NodePath("Grow")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionPolygon2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionPolygon2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionPolygon2D:polygon")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -22.8571, -37.1429, 2.85714, -82.8572, 40, -120, 91.4286, -124.286, 104.286, -87.1429, 74.2857, -38.5714, 44.2857, 0, 7.14286, 64.2857, -5.71429, 115.714 ) ]
}

[node name="SproutAttack" type="Area2D"]
scale = Vector2( 0.8, 0.8 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -85.7143, 115.714, -58.5714, 30, -22.8571, -37.1429, 2.85714, -82.8572, 40, -120, 91.4286, -124.286, 104.286, -87.1429, 74.2857, -38.5714, 44.2857, 0, 7.14286, 64.2857, -5.71429, 115.714 )

[node name="CauseOtherSpoutHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CauseOtherSpoutHitbox"]
modulate = Color( 0.317647, 1, 0.278431, 1 )
position = Vector2( 0, 101.429 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Disappear = SubResource( 2 )
anims/Grow = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Grow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SoundEffects"

[node name="SlideWhistle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -7.133
bus = "SoundEffects"

[connection signal="body_entered" from="." to="." method="_on_SproutAttack_body_entered"]
[connection signal="area_entered" from="CauseOtherSpoutHitbox" to="." method="_on_CauseOtherSpoutHitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
